@@ -75,3 +75,4 @@ EXPORTS
 	eXosip_sdp_negotiation_add_codec @73
 	eXosip_sdp_negotiation_remove_audio_payloads @74
 	eXosip_set_firewallip @75
+	eXosip_guess_localip @76
